# DrissionPage-MCP-Server

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
browsers/: readme_please.md
browsers/chrome-portable/: readme_please.md
docs/: package-lock.json  package.json
docs/site_config/: README.md  api-reference.md  architecture.md  faq.md  index.md  instruction.md  mcp-tools.md
docs/site_config/.vitepress/: config.mts
src/drissionpage_mcp/: __init__.py  main.py
src/drissionpage_mcp/config/: __init__.py  settings.py
src/drissionpage_mcp/core/: __init__.py  browser_manager.py  element_handler.py  file_handler.py  network_listener.py
src/drissionpage_mcp/services/: __init__.py  cdp_service.py  dom_service.py  screenshot_service.py
src/drissionpage_mcp/utils/: __init__.py  helpers.py  text_matcher.py
tests/: __init__.py  check_browser.py  local_build_test.ps1
